# mlpbc_ros

./: .gitignore
acrobot_bringup/: CMakeLists.txt  package.xml
controllers/: CMakeLists.txt  package.xml
controllers/julia/: Manifest.toml  Project.toml  iwp_idapbc.jl
controllers/launch/: iwp_idapbc.launch
drivers/teensy_encoder/: .gitignore  README.md
drivers/teensy_encoder/src/: main.cpp
drivers/teensy_encoder/upload/: firmware.hex
iwp_bringup/: CMakeLists.txt  package.xml
iwp_bringup/config/: epos2.yaml  epos7010-20211011.dcf  epos7010-20211018-2.dcf  epos7010-20211018-3.dcf  epos7010-20211018.dcf  maxon_motor_EPOS2_2126h_6420h_0000h_0000h.eds  ros_controllers.yaml
iwp_bringup/launch/: bringup.launch
iwp_bringup/urdf/: iwp.urdf.xacro
joint_state_filter/: CMakeLists.txt  package.xml
joint_state_filter/config/: plotjuggler_layout.xml  teensy_encoder_filter.yaml
joint_state_filter/include/joint_state_filter/: differentiator.h
joint_state_filter/launch/: teensy_encoder_filter.launch
joint_state_filter/src/: differentiator.cpp  joint_state_filter_node.cpp
ml_based_controllers/: CMakeLists.txt  package.xml
ml_based_controllers/config/: plotjuggler.xml
ml_based_controllers/data/: iwp_ml_idapbc_2021-11-17-16-32-47.bag  pbc_bayesian_experiments.tar.xz  pbc_experiments.tar.xz  process.jl
ml_based_controllers/data/20211115/: iwp_ml_idapbc_2021-11-15-13-55-16.bag  iwp_ml_idapbc_2021-11-15-13-56-05.bag
ml_based_controllers/data/20211117/: iwp_ml_idapbc_2021-11-17-16-26-00.bag  iwp_ml_idapbc_2021-11-17-16-28-20.bag  iwp_ml_idapbc_2021-11-17-16-29-26.bag  iwp_ml_idapbc_2021-11-17-16-31-34.bag  iwp_ml_idapbc_2021-11-17-16-32-14.bag
ml_based_controllers/data/20211216/: 00.csv  01.csv  02.csv  03.csv  04.csv  05.csv
ml_based_controllers/data/20220121/: 01.csv  02.csv  03.csv  04.csv  05.csv  notes.md
ml_based_controllers/data/20220216/: bidapbc_00.csv  bidapbc_01.csv  bidapbc_02.csv  bpbc_00.csv  bpbc_01.csv
ml_based_controllers/data/20220217/: bidapbc_0rings_00.csv  bidapbc_0rings_01.csv  bidapbc_2rings_00.csv  idapbc_0rings_00.csv  idapbc_0rings_01.csv  idapbc_2rings_00.csv
ml_based_controllers/data/20220223/: bayesian_neuralpbc_1rings_00.csv  bayesian_neuralpbc_1rings_01.csv  bayesian_neuralpbc_1rings_02.csv  bayesian_neuralpbc_2rings_00.csv  bayesian_neuralpbc_2rings_01.csv  bayesian_neuralpbc_2rings_02.csv  bayesian_neuralpbc_3rings_00.csv  bayesian_neuralpbc_3rings_01.csv  bayesian_neuralpbc_3rings_02.csv  bayesian_neuralpbc_4rings_00.csv  bayesian_neuralpbc_4rings_01.csv  bayesian_neuralpbc_4rings_02.csv  neuralpbc_0rings_00.csv  neuralpbc_0rings_01.csv  neuralpbc_0rings_02.csv  neuralpbc_1rings_02.csv  neuralpbc_2rings_00.csv  neuralpbc_2rings_01.csv  neuralpbc_2rings_02.csv  neuralpbc_3rings_00.csv  neuralpbc_3rings_01.csv  neuralpbc_3rings_02.csv  neuralpbc_4rings_00.csv  neuralpbc_4rings_01.csv  neuralpbc_4rings_02.csv
ml_based_controllers/data/20220301/: idapbc_bayesian_experiments.tar.xz  idapbc_experiments.tar.xz
ml_based_controllers/julia/: Manifest.toml  Project.toml  bays_ode_hardware.bson  hardware_functions.jl  iwp_bayesian_weights.bson  iwp_bw2.bson  iwp_idapbc.jl  neuralpbc_01.bson  neuralpbc_02.bson  params.jl  precompile_script.jl  run.sh
ml_based_controllers/julia/models/: neuralidapbc_1ring.bson  neuralidapbc_bayesian_00.bson  neuralpbc_00.bson  neuralpbc_1ring.bson  neuralpbc_bayesian_00.bson
ml_based_controllers/launch/: iwp_idapbc.launch  iwp_linear.launch  record_states.launch
ml_based_controllers/python/: iwp_plotjuggler_layout.xml  iwp_plotjuggler_layout_bag.xml  linear.py
robot_drivers/: install.sh
robot_drivers/epos2_canopen/: CMakeLists.txt  package.xml
robot_drivers/epos2_canopen/config/: epos.yml  epos7010-20211021.dcf  epos7010.dcf  master.dcf  tutorial.yml
robot_drivers/epos2_canopen/include/epos2_canopen/: driver.hpp  master.h  master_ros.h
robot_drivers/epos2_canopen/src/: main.cpp  master.cpp  master_ros.cpp
robot_drivers/teensy_encoder/: .gitignore
robot_drivers/teensy_encoder/src/: main.cpp
robot_hardware/: CMakeLists.txt  package.xml
robot_hardware/config/: EPOS_Services.perspective  hardware_config.yaml
robot_hardware/include/robot_hardware/: acrobot_hybrid.h  epos2_canopen.h  epos_device.h
robot_hardware/launch/: hardware_bringup.launch  teleop.launch
robot_hardware/src/: acrobot_hybrid.cpp  epos2_canopen.cpp  epos_device.cpp  robot_hardware.cpp
(+5 files in other folders)
