<?xml version="1.0"?>
<package format="2">
  <name>acrobot_bringup</name>
  <version>0.0.0</version>
  <description>The acrobot_bringup package</description>
  <maintainer email="wankun@todo.todo">wankun</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export></export>
</package>
