<?xml version="1.0"?>
<package format="2">
  <name>robot_hardware</name>
  <version>0.0.0</version>
  <description>The robot_hardware package</description>
  <maintainer email="wankun@todo.todo">wankun</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_manager</depend>
  <depend>effort_controllers</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>joint_state_controller</depend>
  <depend>maxon_epos_driver</depend>
  <depend>roscpp</depend>
  <depend>rosserial_server</depend>
  <depend>sensor_msgs</depend>

</package>
